--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@
             <div class="stats-grid">
                 <div class="stat-card">
                     <div class="stat-number">3+</div>
-                    <div class="stat-label">Professional Internships</div>
+                    <div class="stat-label">Professional Experience</div>
                 </div>
                 <div class="stat-card">
                     <div class="stat-number">5</div>
