Update hero section description in index.html

--- a/index.html
+++ b/index.html
@@ -668,8 +668,7 @@
         <div class="hero-content">
             <h1>Munish Pakshirajan</h1>
             <p>Finance Analyst | Digital Marketer | Business Strategist</p>
-            <p style="font-size: 1rem; margin-top: 1rem;">Marketing-driven commerce graduate with 8+ months of hands-on experience in marketing, GA4 analytics, and customer acquisition. Proven expertise managing social media campaigns, optimizing marketing ROI, and driving customer engagement. Proficient in GA4, Excel financial modelling, and multi-channel marketing strategy. Delivered measurable results in brand growth and lead conversion through data-driven decision-making and cross-functional collaboration.</p>
-            <div class="cta-buttons">
+            <p style="font-size: 1rem; margin-top: 1rem;">Commerce graduate from Shiv Nadar University with expertise in financial modeling, digital marketing, and brand strategy. Passionate about leveraging data-driven insights to drive business growth.</p> 
                 <a href="#projects" class="btn btn-primary">View My Work</a>
                 <a href="#contact" class="btn btn-secondary">Get In Touch</a>
             </div>
