Update statistics in index.html

--- a/index.html
+++ b/index.html
@@ -772,8 +772,8 @@
                     <div class="stat-label">Successful Projects</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-number">Chennai</div>
-                    <div class="stat-label">Based In</div>
+                    <div class="stat-number">5+</div>
+                    <div class="stat-label">Mock Campagins</div>
                 </div>
             </div>
 
